--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "*WIP*",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/chantastic/pseudo/issues"
   },
-  "homepage": "https://github.com/chantastic/pseudo"
+  "homepage": "https://github.com/chantastic/pseudo",
+  "devDependencies": {
+    "eslint": "^0.24.1"
+  }
 }
