--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/chantastic/pseudo",
   "devDependencies": {
-    "eslint": "^0.24.1"
+    "eslint": "^0.24.1",
+    "webpack": "^1.10.5"
   }
 }
