--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "*WIP*",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "eslint .",
     "build": "webpack"
   },
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/chantastic/pseudo",
   "devDependencies": {
     "eslint": "^0.24.1",
+    "jest": "^0.1.40",
     "webpack": "^1.10.5"
   }
 }
